# ChessCore

./: .gitignore  ChessBoard.py  README.md  basic_pieces  chess_board.py  piece_superclass.py  pyproject.toml
src/: basic_movement.py  movement_superclass.py
src/chesscore_pisca/: __about__.py  basic_movement.py  basic_pieces.py  chess_board.py  display_moves.py  movement_superclass.py  piece_superclass.py
src/chesscore_pisca/pieces/: bishop.py  knight.py  pawn.py  queen.py  rook.py
tests/: test_chess_board.py  test_movement_superclass.py  test_piece_superclass.py
